# fileman

./: CHANGELOG.md  Cargo.toml  Makefile  README.md
.github/workflows/: ci.yml  release.yml
benches/: directory_load.rs
docs/: PRD.md  optimizations.md
docs/architecture/: README.md  adr-001-gpui-vertical-slice-migration.md  app-architecture.md  gpui-performance-plan.md
docs/specs/: file-manager-feature-parity.md
docs/specs/feature-parity/: 000-shared.md  001-f01-filename-search.md  002-f02-browser-tabs.md  003-f03-navigation-history.md  004-f04-archive-browse-extract-compress.md  005-f05-in-app-editor.md  006-f06-sftp-remote-browsing.md  007-f07-elevated-permissions-chmod-chown-privileged-io.md  008-f08-bookmarks.md  009-f09-tags.md  010-f10-sort-modes.md  011-f11-incremental-filter-typeahead.md  012-f12-flattened-recursive-view.md  013-f13-bulk-rename.md  014-f14-open-with-rifle-rules.md  015-f15-shell-command-on-selection.md  016-f16-trash-aware-delete.md  017-f17-create-file-symlink-hardlink.md  018-f18-metadata-columns.md  019-f19-vcs-status-in-listing.md  020-f20-fuzzy-path-jump-fzf-zoxide-style.md  021-f21-macros-and-colon-commands.md  022-f22-miller-columns.md  023-f23-undo-file-operations.md  024-f24-paste-conflict-resolution.md  025-f25-config-file-and-key-remapping.md  026-f26-plugins.md  027-f27-additional-remotes-smb-webdav.md  028-f28-thumbnail-grid-mode.md  029-f29-pane-sync-and-compare.md  030-f30-disk-usage-insight.md  031-f31-task-progress-queue.md  032-f32-glob-marking.md  033-f33-mount-volume-browser.md  034-f34-content-search.md  README.md
etc/: stiff.desktop
scripts/: replay_runner.sh
src/: app_state.rs  archive.rs  elevate.rs  gpui_shell.rs  image_decode.rs  input.rs  lib.rs  main.rs  replay_runner.rs  sftp.rs  shell.rs  snapshot.rs
src/core/: mod.rs
src/core/format/: mod.rs
src/core/fs/: copy.rs  directory.rs  mod.rs
src/core/media/: mod.rs
src/core/model/: edit.rs  entry.rs  mod.rs  navigation.rs  preview.rs  search.rs
src/core/model/io_task/: mod.rs  result.rs  task.rs
src/core/preview/: mod.rs
src/core/progress/: mod.rs
src/features/: mod.rs  vim_keys.rs
src/features/clipboard/: copy.rs  effect.rs  mod.rs  paste.rs  selection.rs  system.rs  targets.rs  types.rs
src/features/file_browser/: actions.rs  assets.rs  command.rs  command_effect.rs  command_executor.rs  command_state.rs  ignored.rs  mod.rs  mode_action.rs  mode_executor.rs  navigation.rs  ops.rs  preview.rs  search.rs  selection.rs  state.rs  tabs.rs  tokens.rs
src/features/file_browser/command/: effect.rs  executor.rs  mod.rs  state.rs  types.rs
src/features/file_browser/components/: badges.rs  chrome.rs  header.rs  help_popup.rs  icons.rs  leader_map.rs  mod.rs  panel.rs  preview_panel.rs  row.rs  row_content.rs
src/features/file_browser/components/variants/: mod.rs  panel_layout.rs  variant.rs
src/features/file_browser/rows/: format.rs  intent.rs  kind.rs  mod.rs
src/features/keybind/: bindings.rs  browser.rs  control.rs  dispatch.rs  gpui_keys.rs  help.rs  leader.rs  mod.rs  modes.rs  navigation.rs  vim_state.rs
src/features/keybind/browser/: command.rs  executor.rs  general.rs  mod.rs  navigation.rs  operations.rs  selection.rs  target.rs  tests.rs  vim.rs
src/features/keybind/registry/: mod.rs  types.rs
src/features/layout/: mod.rs
src/features/task_queue/: mod.rs
src/gpui_shell/: mod.rs
src/gpui_shell/features/: mod.rs
src/gpui_shell/features/file_browser/: assets.rs  keys.rs  mod.rs  ops.rs  rows.rs  selection.rs  state.rs  tokens.rs
src/gpui_shell/features/file_browser/components/: badges.rs  header.rs  icons.rs  mod.rs  panel.rs  row.rs
src/shell/: app.rs  commands.rs  input.rs  input_modes.rs  key_handler.rs  mod.rs  operations.rs  render.rs  state.rs  theme.rs
src/ui/: command_bar.rs  help.rs
tests/: TEST_PLAN.md  gui_smoke_test.sh  sftp_localhost.rs
tests/cases/: vim_chains.ron  vim_navigation.ron
wix/: main.wxs
