[package]
name = "fileman"
version = "0.3.3"
description = "Two-panel file manager"
keywords = ["file-manager", "gpui"]
categories = ["filesystem"]
license = "MIT"
repository = "https://github.com/kvark/fileman"
authors = ["Dzmitry Malyshau"]
edition = "2024"
default-run = "fileman"
exclude = [
    "etc/snapshots/",
    "etc/macos/",
    "etc/windows/",
    "tests/",
    "scripts/",
    ".github/",
    "PLAN.md",
]

[package.metadata.bundle]
name = "FileMan"
identifier = "com.fileman.app"
icon = ["etc/macos/icon.png", "etc/windows/icon.ico"]

[dependencies]
anyhow = "1.0"
zune-core = "0.5"
zune-bmp = "0.5"
zune-image = { version = "0.5", default-features = false, features = ["jpeg", "png", "bmp", "metadata"] }
gif = "0.14"
image-webp = "0.2"
exif = { package = "kamadak-exif", version = "0.6" }
zip = { version = "8", default-features = false, features = ["deflate"] }
tar = "0.4"
flate2 = "1.0"
bzip2 = "0.6.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yml = "0.0.12"
toml = "0.8"
egui = "0.34"
gpui = "0.2.2"
gpui-component = "0.5.1"
syntect = "5"
memchr = "2.7"
ssh2 = "0.9"
dds = "0.2.0"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[package.metadata.deb]
maintainer = "Dzmitry Malyshau"
section = "utils"
assets = [
    ["target/release/fileman", "usr/bin/fileman", "755"],
    ["etc/fileman.desktop", "usr/share/applications/fileman.desktop", "644"],
    ["etc/fileman.svg", "usr/share/icons/hicolor/scalable/apps/fileman.svg", "644"],
]

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/fileman", dest = "/usr/bin/fileman", mode = "755" },
    { source = "etc/fileman.desktop", dest = "/usr/share/applications/fileman.desktop", mode = "644" },
    { source = "etc/fileman.svg", dest = "/usr/share/icons/hicolor/scalable/apps/fileman.svg", mode = "644" },
]

[features]
vendored-openssl = ["ssh2/vendored-openssl"]

[[bin]]
name = "fileman"
path = "src/main.rs"

[[bin]]
name = "fileman-gpui"
path = "src/bin/fileman-gpui.rs"

[[bin]]
name = "snapshot_compare"
path = "src/bin/snapshot_compare.rs"

[[test]]
name = "sftp_localhost"
path = "tests/sftp_localhost.rs"

[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(gles)'] }
