[package]
name = "stiff"
version = "0.3.3"
description = "Keyboard-first GPUI file manager"
keywords = ["file-manager", "gpui"]
categories = ["filesystem"]
license = "MIT"
repository = "https://github.com/kvark/stiff"
authors = ["Dzmitry Malyshau"]
edition = "2024"
default-run = "stiff"
exclude = [
    "etc/snapshots/",
    "etc/macos/",
    "etc/windows/",
    "tests/",
    "scripts/",
    ".github/",
    "PLAN.md",
]

[package.metadata.bundle]
name = "stiff"
identifier = "com.stiff.app"
icon = ["etc/macos/icon.png", "etc/windows/icon.ico"]

[dependencies]
anyhow = "1.0"
zune-core = "0.5"
zune-bmp = "0.5"
zune-image = { version = "0.5", default-features = false, features = ["jpeg", "png", "bmp", "metadata"] }
gif = "0.14"
image-webp = "0.2"
exif = { package = "kamadak-exif", version = "0.6" }
zip = { version = "8", default-features = false, features = ["deflate"] }
tar = "0.4"
flate2 = "1.0"
bzip2 = "0.6.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yml = "0.0.12"
toml = "0.8"
egui = "0.34"
gpui = "0.2.2"
gpui-component = "0.5.1"
arboard = { version = "3.6.1", default-features = false, features = ["wayland-data-control"] }
syntect = "5"
memchr = "2.7"
ignore = "0.4"
ssh2 = "0.9"
dds = "0.2.0"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[package.metadata.deb]
maintainer = "Dzmitry Malyshau"
section = "utils"
assets = [
    ["target/release/stiff", "usr/bin/stiff", "755"],
    ["etc/stiff.desktop", "usr/share/applications/stiff.desktop", "644"],
    ["etc/stiff.svg", "usr/share/icons/hicolor/scalable/apps/stiff.svg", "644"],
]

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/stiff", dest = "/usr/bin/stiff", mode = "755" },
    { source = "etc/stiff.desktop", dest = "/usr/share/applications/stiff.desktop", mode = "644" },
    { source = "etc/stiff.svg", dest = "/usr/share/icons/hicolor/scalable/apps/stiff.svg", mode = "644" },
]

[features]
vendored-openssl = ["ssh2/vendored-openssl"]

[[bin]]
name = "stiff"
path = "src/main.rs"

[[bin]]
name = "snapshot_compare"
path = "src/bin/snapshot_compare.rs"

[[test]]
name = "sftp_localhost"
path = "tests/sftp_localhost.rs"

[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(gles)'] }
